<resources>
    <string name="app_name">Hotel Management</string>
    <string name="loginAct">登陆界面</string>
    <string name="usrNameHint">用户名</string>
    <string name="pswHint">密码</string>
    <string name="checkPsw">记住密码</string>
    <string name="login">登陆</string>
    <string name="signUp">注册账号</string>
    <string name="resetPsw">找回密码</string>
    <string name="welcomeSignUp">欢迎注册\nHotel Manager</string>
    <string name="signUpUsrNameHint">请输入您的用户名</string>
    <string name="signUpPswHint">请输入您的密码</string>
    <string name="signUpMail">请输入您的邮箱</string>
    <string name="agreement">选择此框和“立即注册”按钮，即表示我同意 Hotel Management 技术协议书之所有内容。</string>
    <string name="signUpNow">立即注册</string>
    <string name="retrievePsw">找回密码\nHotel Manager</string>
    <string name="welcomeWords">Hotel Management\n欢迎您</string>
    <string name="testUser">单人旁</string>
    <string name="testAccount">账号：123456</string>
    <string name="hotelInfo">酒店信息 Hotel Information</string>
    <string name="roomManagement">房间管理 Room Management</string>
    <string name="membershipManagement">会员管理 Membership Management</string>
    <string name="setting">系统设置 Settings</string>
    <string name="listReport"> Hotel Manager 数据报表</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="detailedDateSelection">请选择具体日期</string>
    <string name="roomGraph"> Hotel Manager 房态图</string>
    <string name="roomInfo"> Hotel Manager 房间信息</string>
    <string name="testCustomerName">何秉昊 Alan Alfred</string>
    <string name="balance">账务余额：6666</string>
    <string name="startEndDate">04-20 11：13 / 04-25 14：00</string>
    <string name="roomPrice">房价：2888</string>
    <string name="cleanRoom">净房</string>
    <string name="dirtyRoom">脏房</string>
    <string name="changePrice">修改房价</string>
    <string name="checkOut">结账</string>
    <string name="clean">通知打扫</string>
    <string name="bigbed">大床房</string>
    <string name="doublebed">双床房</string>
    <string name="fantasticbed">豪华套房</string>
</resources>
