<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="Hotel Manager"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:layout_marginTop="100dp" />

    <View
        android:layout_width="220dp"
        android:layout_height="1dp"
        android:background="@color/purple"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/loginAct"
        android:textColor="@color/grey1"
        android:textSize="25sp"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="30dp"
        >

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="19dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/user"
            android:scaleType="fitXY"
            />
        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity = "center"
            android:layout_toRightOf="@+id/img_account"
            android:hint="@string/usrNameHint"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey1"
            android:maxLines="1"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="30dp"
        >
        <ImageView
            android:id="@+id/img_psw"
            android:layout_width="19dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/psw"
            android:scaleType="fitXY"
            />
        <EditText
            android:id="@+id/et_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity = "center"
            android:layout_toRightOf="@+id/img_psw"
            android:hint="@string/pswHint"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey1"
            android:maxLines="1"
            />
        <ToggleButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/bt_see"
            android:background="@drawable/see"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:textOff=""
            android:textOn=""
            />
    </RelativeLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_rememberPsw"
        android:layout_marginLeft="250dp"
        android:text="@string/checkPsw"
        android:textColor="@color/purple"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/purple"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="14dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:text="@string/signUp"
            android:textColor="@color/purple"
            android:textSize="14dp"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_resetPsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:text="@string/resetPsw"
            android:textColor="@color/purple"
            android:textSize="14dp"
            android:clickable="true"
            />

    </LinearLayout>
</LinearLayout>