<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signUp">


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/hotel"
            android:layout_weight="3"
            android:layout_marginTop="40dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/retrievePsw"
            android:textColor="@color/purple"
            android:textSize="30sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="100dp"
        >
        <ImageView
            android:id="@+id/img_mailBox"
            android:layout_width="19dp"
            android:layout_height="15dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/mail"
            android:scaleType="fitXY"
            />
        <EditText
            android:id="@+id/et_mailBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity = "center"
            android:layout_toRightOf="@+id/img_mailBox"
            android:hint="@string/signUpMail"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey1"
            android:maxLines="1"
            />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_resetPsw"
        android:background="@color/purple"
        android:text="@string/resetPsw"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:textStyle="bold"/>

</LinearLayout>