<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey2"
    tools:context=".listPage">

    <!---顶部状态栏-->
    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/hotel"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/roomInfo"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/export"
                android:scaleType="fitXY" />
        </RelativeLayout>
    </LinearLayout>

    <!---房间信息-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/topPanel"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@android:color/white">

        <!---房间图片-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/testroomimage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/roomID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8101"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                />
            <View
                android:layout_width="5dp"
                android:layout_height="400dp"
                android:background="@color/grey2"
                android:layout_marginRight="40dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/testCustomerName"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    />
                <TextView
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startEndDate"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/t1"
                    />
                <TextView
                    android:id="@+id/t3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/roomPrice"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/t2"
                    />
                <TextView
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/t3"
                    />

                <Button
                    android:id="@+id/b1"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:text="@string/cleanRoom"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:background="@color/green"
                    android:textStyle="bold"
                    android:layout_toRightOf="@id/t4"
                    android:layout_marginLeft="30dp"
                    android:layout_alignBaseline="@id/t4"
                    />
                <Button
                    android:id="@+id/b2"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:text="@string/changePrice"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:background="@color/blue"
                    android:textStyle="bold"
                    android:layout_marginTop="180dp"
                    android:layout_marginLeft="0dp"
                    />
                <Button
                    android:id="@+id/b3"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:text="@string/checkOut"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:background="@color/blue"
                    android:textStyle="bold"
                    android:layout_marginLeft="96dp"
                    android:layout_marginTop="180dp"
                    />

                <Button
                    android:id="@+id/b4"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="180dp"
                    android:layout_toRightOf="@id/t1"
                    android:background="@color/blue"
                    android:text="@string/clean"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


    <!---底部菜单栏-->
    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_weight="2"
            android:background="@android:color/white" />

        <ImageButton
            android:id="@+id/bt_home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/home"

            />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_weight="1.5"
            android:background="@android:color/white" />

        <ImageButton
            android:id="@+id/bt_graph"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/graph" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_weight="1.5"
            android:background="@android:color/white" />

        <ImageButton
            android:id="@+id/bt_list"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/list" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_weight="1.5"
            android:background="@android:color/white" />

        <ImageButton
            android:id="@+id/bt_setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/setting" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_weight="2"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

</RelativeLayout>